project_502_team18/src/vyass/compiler/gener/VyassParser.java
// Generated from C:/Users/sdhulip7/Documents/SER502-Spring2023-Team18/project_502_team18/src\Vyass.g4 by ANTLR 4.12.0
package vyass.compiler.gener;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;
import vyass.compiler.gener.VyassListener;
import vyass.compiler.*;
import vyass.compiler.gener.VyassParser;
import vyass.compiler.gener.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class VyassParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, Space=3, IF=4, ELIF=5, ELSE=6, RETURN=7, BREAK=8, CONTINUE=9, 
		PRINT=10, BEGIN=11, END=12, WHILE=13, FOR=14, IN=15, RANGE=16, MAIN=17, 
		ASSIGNMENT_BINARY=18, ADDITION_BINARY=19, SUBSTRACTION_BINARY=20, MULTIPLICATION_BINARY=21, 
		DIVISION_BINARY=22, MODULUS_BINARY=23, TERNARY=24, NOT_BINARY=25, LESSTHAN_BINARY=26, 
		GREATERTHAN_BINARY=27, LESSTHANEQUALS_BINARY=28, GREATERTHANEQUALS_BINARY=29, 
		EQUALS_BINARY=30, NOTEQUALS_BINARY=31, AND_BINARY=32, OR_BINARY=33, ARITHMETIC_OP=34, 
		COMPARISION_OP=35, INTEGER_DTYPE=36, BOOL_DTYPE=37, STR_DTYPE=38, COMMA_SEP=39, 
		SEMICOLON_SEP=40, COLON_SEP=41, START_BLOCK=42, END_BLOCK=43, LEFT_PAREN=44, 
		RIGHT_PAREN=45, STRING_LITERAL=46, BOOLEAN_LITERAL=47, INTEGER_LITERAL=48, 
		IDENTIFIER=49;
	public static final int
		RULE_parse = 0, RULE_literalConst = 1, RULE_dType = 2, RULE_program = 3, 
		RULE_mainFunctionBlock = 4, RULE_exprBlock = 5, RULE_variableDeclarations = 6, 
		RULE_variableList = 7, RULE_variableListMulti = 8, RULE_variableInitialization = 9, 
		RULE_functionDeclarations = 10, RULE_parameters = 11, RULE_multiParameter = 12, 
		RULE_parameter = 13, RULE_functionBlock = 14, RULE_statements = 15, RULE_assignmentStatement = 16, 
		RULE_assignmentList = 17, RULE_printStatement = 18, RULE_returnStatement = 19, 
		RULE_continueStatement = 20, RULE_breakStatement = 21, RULE_conditionalBlock = 22, 
		RULE_elifList = 23, RULE_elseBlock = 24, RULE_ifCondition = 25, RULE_iterativeBlock = 26, 
		RULE_whileTraditionalBlock = 27, RULE_whileCondition = 28, RULE_forBlock = 29, 
		RULE_forTraditionalBlock = 30, RULE_forInRangeBlock = 31, RULE_forInit = 32, 
		RULE_forInitStatement = 33, RULE_forCondition = 34, RULE_forUpdate = 35, 
		RULE_forUpdateStatement = 36, RULE_forAssign = 37, RULE_forInRangeLowerLimit = 38, 
		RULE_forInRangeUpperLimit = 39, RULE_functionCall = 40, RULE_values = 41, 
		RULE_functionValue = 42, RULE_rExpress = 43, RULE_express = 44, RULE_ternaryTrue = 45, 
		RULE_ternaryFalse = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "literalConst", "dType", "program", "mainFunctionBlock", "exprBlock", 
			"variableDeclarations", "variableList", "variableListMulti", "variableInitialization", 
			"functionDeclarations", "parameters", "multiParameter", "parameter", 
			"functionBlock", "statements", "assignmentStatement", "assignmentList", 
			"printStatement", "returnStatement", "continueStatement", "breakStatement", 
			"conditionalBlock", "elifList", "elseBlock", "ifCondition", "iterativeBlock", 
			"whileTraditionalBlock", "whileCondition", "forBlock", "forTraditionalBlock", 
			"forInRangeBlock", "forInit", "forInitStatement", "forCondition", "forUpdate", 
			"forUpdateStatement", "forAssign", "forInRangeLowerLimit", "forInRangeUpperLimit", 
			"functionCall", "values", "functionValue", "rExpress", "express", "ternaryTrue", 
			"ternaryFalse"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'&&'", "'||'", null, "'if'", "'elif'", "'else'", "'return'", "'break'", 
			"'continue'", "'print'", "'begin'", "'end'", "'while'", "'for'", "'in'", 
			"'range'", "'main'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'?'", 
			"'!'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&'", "'|'", null, 
			null, "'int'", "'bool'", "'string'", "','", "';'", "':'", "'{'", "'}'", 
			"'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "Space", "IF", "ELIF", "ELSE", "RETURN", "BREAK", "CONTINUE", 
			"PRINT", "BEGIN", "END", "WHILE", "FOR", "IN", "RANGE", "MAIN", "ASSIGNMENT_BINARY", 
			"ADDITION_BINARY", "SUBSTRACTION_BINARY", "MULTIPLICATION_BINARY", "DIVISION_BINARY", 
			"MODULUS_BINARY", "TERNARY", "NOT_BINARY", "LESSTHAN_BINARY", "GREATERTHAN_BINARY", 
			"LESSTHANEQUALS_BINARY", "GREATERTHANEQUALS_BINARY", "EQUALS_BINARY", 
			"NOTEQUALS_BINARY", "AND_BINARY", "OR_BINARY", "ARITHMETIC_OP", "COMPARISION_OP", 
			"INTEGER_DTYPE", "BOOL_DTYPE", "STR_DTYPE", "COMMA_SEP", "SEMICOLON_SEP", 
			"COLON_SEP", "START_BLOCK", "END_BLOCK", "LEFT_PAREN", "RIGHT_PAREN", 
			"STRING_LITERAL", "BOOLEAN_LITERAL", "INTEGER_LITERAL", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Vyass.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VyassParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public Token x;
		public TerminalNode EOF() { return getToken(VyassParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125899906842622L) != 0)) {
				{
				{
				setState(94);
				((ParseContext)_localctx).x = matchWildcard();
				System.out.printf("text: %-7s  type: %s \n",
				           (((ParseContext)_localctx).x!=null?((ParseContext)_localctx).x.getText():null), tokenNames[(((ParseContext)_localctx).x!=null?((ParseContext)_localctx).x.getType():0)]);
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralConstContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() { return getToken(VyassParser.INTEGER_LITERAL, 0); }
		public TerminalNode BOOLEAN_LITERAL() { return getToken(VyassParser.BOOLEAN_LITERAL, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(VyassParser.STRING_LITERAL, 0); }
		public LiteralConstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literalConst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterLiteralConst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitLiteralConst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitLiteralConst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralConstContext literalConst() throws RecognitionException {
		LiteralConstContext _localctx = new LiteralConstContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_literalConst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 492581209243648L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DTypeContext extends ParserRuleContext {
		public TerminalNode INTEGER_DTYPE() { return getToken(VyassParser.INTEGER_DTYPE, 0); }
		public TerminalNode BOOL_DTYPE() { return getToken(VyassParser.BOOL_DTYPE, 0); }
		public TerminalNode STR_DTYPE() { return getToken(VyassParser.STR_DTYPE, 0); }
		public DTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterDType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitDType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitDType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DTypeContext dType() throws RecognitionException {
		DTypeContext _localctx = new DTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 481036337152L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(VyassParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(VyassParser.END, 0); }
		public List<FunctionDeclarationsContext> functionDeclarations() {
			return getRuleContexts(FunctionDeclarationsContext.class);
		}
		public FunctionDeclarationsContext functionDeclarations(int i) {
			return getRuleContext(FunctionDeclarationsContext.class,i);
		}
		public MainFunctionBlockContext mainFunctionBlock() {
			return getRuleContext(MainFunctionBlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(BEGIN);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 481036337152L) != 0)) {
				{
				{
				setState(108);
				functionDeclarations();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MAIN) {
				{
				setState(114);
				mainFunctionBlock();
				}
			}

			setState(117);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainFunctionBlockContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(VyassParser.MAIN, 0); }
		public ExprBlockContext exprBlock() {
			return getRuleContext(ExprBlockContext.class,0);
		}
		public MainFunctionBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunctionBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterMainFunctionBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitMainFunctionBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitMainFunctionBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainFunctionBlockContext mainFunctionBlock() throws RecognitionException {
		MainFunctionBlockContext _localctx = new MainFunctionBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mainFunctionBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(MAIN);
			setState(120);
			exprBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprBlockContext extends ParserRuleContext {
		public TerminalNode START_BLOCK() { return getToken(VyassParser.START_BLOCK, 0); }
		public TerminalNode END_BLOCK() { return getToken(VyassParser.END_BLOCK, 0); }
		public List<VariableDeclarationsContext> variableDeclarations() {
			return getRuleContexts(VariableDeclarationsContext.class);
		}
		public VariableDeclarationsContext variableDeclarations(int i) {
			return getRuleContext(VariableDeclarationsContext.class,i);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public ExprBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterExprBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitExprBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitExprBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprBlockContext exprBlock() throws RecognitionException {
		ExprBlockContext _localctx = new ExprBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exprBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(START_BLOCK);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 481036337152L) != 0)) {
				{
				{
				setState(123);
				variableDeclarations();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 567347999958928L) != 0)) {
				{
				{
				setState(129);
				statements();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(END_BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationsContext extends ParserRuleContext {
		public DTypeContext dType() {
			return getRuleContext(DTypeContext.class,0);
		}
		public VariableListContext variableList() {
			return getRuleContext(VariableListContext.class,0);
		}
		public TerminalNode SEMICOLON_SEP() { return getToken(VyassParser.SEMICOLON_SEP, 0); }
		public VariableDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterVariableDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitVariableDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitVariableDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationsContext variableDeclarations() throws RecognitionException {
		VariableDeclarationsContext _localctx = new VariableDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableDeclarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			dType();
			setState(138);
			variableList();
			setState(139);
			match(SEMICOLON_SEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableListContext extends ParserRuleContext {
		public VariableInitializationContext variableInitialization() {
			return getRuleContext(VariableInitializationContext.class,0);
		}
		public VariableListMultiContext variableListMulti() {
			return getRuleContext(VariableListMultiContext.class,0);
		}
		public VariableListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterVariableList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitVariableList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitVariableList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableListContext variableList() throws RecognitionException {
		VariableListContext _localctx = new VariableListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variableList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			variableInitialization();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA_SEP) {
				{
				setState(142);
				variableListMulti();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableListMultiContext extends ParserRuleContext {
		public TerminalNode COMMA_SEP() { return getToken(VyassParser.COMMA_SEP, 0); }
		public VariableInitializationContext variableInitialization() {
			return getRuleContext(VariableInitializationContext.class,0);
		}
		public VariableListMultiContext variableListMulti() {
			return getRuleContext(VariableListMultiContext.class,0);
		}
		public VariableListMultiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableListMulti; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterVariableListMulti(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitVariableListMulti(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitVariableListMulti(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableListMultiContext variableListMulti() throws RecognitionException {
		VariableListMultiContext _localctx = new VariableListMultiContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableListMulti);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(COMMA_SEP);
			setState(146);
			variableInitialization();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA_SEP) {
				{
				setState(147);
				variableListMulti();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableInitializationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(VyassParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGNMENT_BINARY() { return getToken(VyassParser.ASSIGNMENT_BINARY, 0); }
		public LiteralConstContext literalConst() {
			return getRuleContext(LiteralConstContext.class,0);
		}
		public VariableInitializationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableInitialization; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).enterVariableInitialization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VyassListener ) ((VyassListener)listener).exitVariableInitialization(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyassVisitor ) return ((VyassVisitor<? extends T>)visitor).visitVariableInitialization(this);
			else return visitor.visitChildren(this);
		}
	}
